--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="input-group mb-3">
+            <div class="input-group mb-3 mt-3">
                 <input type="text" class="form-control userIn" placeholder="Search GIF"
                     aria-label="Recipient's username" aria-describedby="basic-addon2">
                 <div class="input-group-append">
