fixed scope issue with gif search ability, can now add buttons and search gifs

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <input type="text" class="form-control userIn" placeholder="Search GIF"
                     aria-label="Recipient's username" aria-describedby="basic-addon2">
                 <div class="input-group-append">
-                    <button class="btn btn-outline-secondary searchBtn" type="button">Add GIF</button>
+                    <button class="btn btn-outline-warning searchBtn" type="button">Add GIF</button>
                 </div>
             </div>
         </div>
